TrialEditorDisplay binded to presenter - TrialEditor

--- a/src/main/java/ru/alepar/gwt/tdt/client/view/TrialEditorDisplay.ui.xml
+++ b/src/main/java/ru/alepar/gwt/tdt/client/view/TrialEditorDisplay.ui.xml
@@ -6,11 +6,13 @@
     <g:HTMLPanel>
         <table width="100%">
             <tr>
-                <td>
-                    Trial name:
-                </td>
-                <td>
-                    <g:TextBox ui:field="nameField"/>
+                <td>Trial name:</td>
+                <td><g:TextBox ui:field="nameField"/></td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <g:Button ui:field="saveButton" text="Save"/>
+                    <g:Button ui:field="cancelButton" text="Cancel"/>
                 </td>
             </tr>
         </table>
